fix double scrollbar for #941

--- a/stylus/Flare/application.styl
+++ b/stylus/Flare/application.styl
@@ -85,7 +85,8 @@
   &.row__landing-page
     flex-order(2)
     overflow(auto)
-    height: 92%
+    max-height: 92%
+    min-height: 88%
     position: relative
     top: 3em
 
